@@ -1,8 +1,7 @@
 From: %(recipient_address)s
 Subject: Confirmation accepted
 
-Your confirmation was accepted, and so your original message has been
-delivered.
+%(confirm_accept_text)s
 
 [ This notice was generated by TMDA v%(TMDA_VERSION)s %(TMDA_HOMEPAGE)s,
   an automated junk-mail reduction system. ]
